content no longer required and reformated forceful and piercing

--- a/TODO.txt
+++ b/TODO.txt
@@ -10,3 +10,8 @@ email sending
 wiki app
 
 debug=false in yml
+
+
+BUGS
+    character form character drop down length
+    lvl 2 of pierce should be shred
